@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 14
skinparam ClassBackgroundColor White
skinparam ClassBorderColor Black
skinparam ArrowColor Black

class UserProfile {
  +_id: ObjectId
  +primaryWallet: string
  +username: string?
  +displayName: string?
  +bio: string?
  +createdAt: Date
  +updatedAt: Date
}

class AuthorProfile {
  +_id: ObjectId
  +userId: ObjectId
  +walletAddress: string
  +slug: string
  +displayName: string
  +bio: string
  +tags: string[]
  +defaultAccessPolicyId: ObjectId?
  +deletedAt: Date?
  +createdAt: Date
  +updatedAt: Date
}

class AccessPolicy {
  +_id: ObjectId
  +authorId: ObjectId
  +name: string
  +description: string?
  +isDefault: boolean
  +policyInput: AccessPolicyInput
  +createdAt: Date
  +updatedAt: Date
}

class AccessPolicyInput {
  +version: number
  +root: AccessRule
}

class AccessRule {
  +type: public | subscription | token_balance | nft_ownership | and | or
  +planCode: string?
  +chainId: number?
  +contractAddress: string?
  +minAmount: string?
  +children: AccessRule[]?
}

class SubscriptionPlan {
  +_id: ObjectId
  +authorId: ObjectId
  +code: string
  +title: string
  +chainId: number
  +tokenAddress: string?
  +tokenType: native | erc20
  +amount: string
  +billingPeriodDays: number
  +planKey: string
  +managerAddress: string?
  +registrationTxHash: string?
  +createdAt: Date
  +updatedAt: Date
}

class Entitlement {
  +_id: ObjectId
  +subscriberWallet: string
  +authorId: ObjectId
  +planCode: string
  +planKey: string
  +chainId: number
  +txHash: string
  +validUntil: Date
  +createdAt: Date
  +updatedAt: Date
}

class Post {
  +_id: ObjectId
  +authorId: ObjectId
  +title: string
  +content: string
  +status: draft | published | archived
  +accessPolicyId: ObjectId?
  +attachments: PostAttachment[]
  +linkedProjectIds: ObjectId[]
  +likesCount: number
  +commentsCount: number
  +viewsCount: number
  +publishedAt: Date?
  +createdAt: Date
  +updatedAt: Date
}

class PostAttachment {
  +id: string
  +objectKey: string
  +fileName: string
  +mimeType: string
  +size: number
}

class PostComment {
  +_id: ObjectId
  +postId: ObjectId
  +authorId: ObjectId
  +walletAddress: string
  +content: string
  +createdAt: Date
}

class Project {
  +_id: ObjectId
  +authorId: ObjectId
  +title: string
  +description: string
  +tags: string[]
  +status: draft | published | archived
  +accessPolicyId: ObjectId?
  +rootNodeId: ObjectId
  +publishedAt: Date?
  +createdAt: Date
  +updatedAt: Date
}

class ProjectNode {
  +_id: ObjectId
  +projectId: ObjectId
  +parentId: ObjectId?
  +type: folder | file
  +name: string
  +objectKey: string?
  +mimeType: string?
  +size: number?
  +createdAt: Date
  +updatedAt: Date
}

class ContractDeployment {
  +_id: ObjectId
  +chainId: number
  +managerAddress: string
  +txHash: string
  +deployedAt: Date
}

UserProfile "1" -- "0..1" AuthorProfile : creates
AuthorProfile "1" -- "0..*" AccessPolicy : owns
AccessPolicy *-- AccessPolicyInput : embeds
AccessPolicyInput *-- AccessRule : root
AccessRule *-- "0..*" AccessRule : children
AuthorProfile "1" -- "0..*" SubscriptionPlan : owns
AuthorProfile "1" -- "0..*" Post : publishes
AuthorProfile "1" -- "0..*" Project : publishes
AccessPolicy "0..1" -- "0..*" Post : gates
AccessPolicy "0..1" -- "0..*" Project : gates
Post *-- "0..*" PostAttachment : embeds
Post "1" -- "0..*" PostComment : comments
Project "1" -- "0..*" ProjectNode : tree
SubscriptionPlan "1" -- "0..*" Entitlement : grants
AuthorProfile "1" -- "0..*" Entitlement : receives
ContractDeployment "1" -- "0..*" SubscriptionPlan : managerAddress
@enduml
